tests/errors/erro_escopo.lua
function void main()
    do
        local x: integer = 10;
        print(x);
    end
    
    -- Erro: x nao existe neste escopo
    print(x);
end
